<resources>
    <string name="app_name">My Application</string>
    <string name="textview">TextView</string>
    <string name="image">" "</string>
    <string name="hint_tckn">Müşteri Numarası / TCKN-YKN</string>
    <string name="hintpassword">Şifre</string>
    <string name="login">Login</string>
    <string name="forget_pasw">

        Forget Pasword
    </string>
    <string name="name">Ad</string>
    <string name="lastname">Soyad</string>
    <string name="tckn">TC Kimlik No</string>
    <string name="phone">Telefon</string>
    <string name="password">Şifre</string>
    <string name="register">Register</string>
    <string name="kayitol">Kayıt Ol</string>
    <string name="donthaveaccount">Henüz bir hesabın yok mu?</string>
    <string name="girisYap">Giriş Yap</string>
    <string name="uploadphoto">upload photo</string>
    <string name="haveAccount">Zaten bir hesabın var mı?</string>
    <string name="investech">Investech</string>
    <string name="vades_z_hesaplarim">VADESİZ HESAPLARIM</string>
    <string name="yatirim_hesaplarim">YATIRIM HESAPLARIM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hisseler_alsat">HİSSELER AL/SAT</string>
    <string name="alis">ALIŞ</string>
    <string name="satis">SATIŞ</string>
    <string name="islem_limiti">İşlem Limiti</string>
    <string name="hisse">Hisse</string>
    <string name="devam_sign"><![CDATA[>]]></string>
    <string name="miktar">MİKTAR</string>
    <string name="fiyat_tipi">Fiyat Tipi</string>
    <string name="limit">Limit</string>
    <string name="adet">Adet</string>
    <string name="adet_giriniz">Adet Giriniz</string>
    <string name="sure_tipi">Süre Tipi</string>
    <string name="fiyat">Fiyat</string>
    <string name="fiyat_giriniz">Fiyat Giriniz</string>
    <string name="emir_bilgilendirme">Emir gerçekleştiğinde bilgilendir.</string>
    <string name="tamam">Tamam</string>
    <string name="title_activity_emirlerim">Emirlerim</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>