<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="315dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout" android:gravity="center">
        <EditText
                android:id="@+id/firstName"
                android:fontFamily="@font/inter"
                android:layout_width="322dp"
                android:layout_height="49dp"
                android:background="@drawable/edit_text_view"
                android:hint="@string/name" android:textColorHint="#80000000" android:paddingStart="20dp"
                android:autofillHints="" android:inputType="text" tools:ignore="RtlSymmetry"/>
        <EditText
                android:id="@+id/lastName"
                android:fontFamily="@font/inter"
                android:layout_width="322dp"
                android:layout_height="49dp"
                android:background="@drawable/edit_text_view"
                android:layout_marginTop="10dp" android:paddingStart="20dp" android:hint="@string/lastname"
                android:textColorHint="#80000000" android:autofillHints="" android:inputType="text"
                tools:ignore="RtlSymmetry"/>
        <EditText
                android:id="@+id/tckn"
                android:fontFamily="@font/inter"
                android:layout_width="322dp"
                android:layout_height="49dp"
                android:background="@drawable/edit_text_view"
                android:layout_marginTop="10dp" android:hint="@string/tckn" android:textColorHint="#80000000"
                android:paddingStart="20dp" android:autofillHints="" android:inputType="number"
                tools:ignore="RtlSymmetry"/>
        <EditText
                android:id="@+id/phoneNum"
                android:fontFamily="@font/inter"
                android:layout_width="322dp"
                android:layout_height="49dp"
                android:background="@drawable/edit_text_view"
                android:layout_marginTop="10dp" android:paddingStart="20dp" android:hint="@string/phone"
                android:textColorHint="#80000000" android:autofillHints="" android:inputType="number"
                tools:ignore="RtlSymmetry,TextFields"/>
        <EditText
                android:id="@+id/password"
                android:fontFamily="@font/inter"
                android:layout_width="322dp"
                android:layout_height="49dp"
                android:background="@drawable/edit_text_view"
                android:layout_marginTop="10dp" android:hint="@string/password" android:textColorHint="#80000000"
                android:paddingStart="20dp" android:autofillHints="" android:inputType="textPassword"
                tools:ignore="RtlSymmetry"/>
    </LinearLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:id="@+id/relativeLayout2">

        <Button
                android:id="@+id/registerBtn"
                android:layout_width="351dp"
                android:layout_height="57dp"
                android:background="@drawable/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/register" android:textAllCaps="false" android:textSize="13sp"
                android:textStyle="bold"/>
    </RelativeLayout>
    <ImageView
            android:layout_width="170dp"
            android:layout_height="213dp"
            
            app:srcCompat="@drawable/background" android:id="@+id/imageView5"
            tools:srcCompat="@drawable/background" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>